fixing alignment in how it works section

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -114,9 +114,14 @@ ul {
 section#howItWorks {
     background-color: #f2f2f2;
 }
+
 h1.text-center.howItWorksHead {
     margin: 0;
     padding: 1em;
+}
+.howItWorksSubHead{
+  white-space: nowrap;
+  text-align: justify;
 }
 #services {
   background-color: #85ABCF;
