--- a/assets/css/society.css
+++ b/assets/css/society.css
@@ -14,6 +14,9 @@ h1.text-center.howItWorksHead {
     margin: 0;
     padding: 1em;
 }
+.howItWorksSubHead{
+  white-space: nowrap;
+}
 
  .homeNav a{
   color: #000000;
